--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Sean McArthur <sean.monstar@gmail.com>",
            "Jonathan Reem <jonathan.reem@gmail.com>",
            "Sebastian Thiel <byronimo@gmail.com>"]
 description = "A utility library for testing clients using hyper"
+repository = "https://github.com/Byron/yup-hyper-mock"
 
 [dependencies]
 hyper = "*"
