Added documentation URL

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Sean McArthur <sean.monstar@gmail.com>",
            "Sebastian Thiel <byronimo@gmail.com>"]
 description = "A utility library for testing clients using hyper"
 repository = "https://github.com/Byron/yup-hyper-mock"
+documentation = "http://byron.github.io/yup-hyper-mock"
 
 [dependencies]
 hyper = "*"
