--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,11 @@ rust:
 before_script:
   - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
 script:
-  - |
-      travis-cargo build &&
-      travis-cargo test &&
-      travis-cargo doc
+  - travis-cargo build
+  - travis-cargo doc
 after_success:
   - travis-cargo doc-upload
-  - travis-cargo coveralls
 
 env:
   global:
-    secure: R2TjgAkb9vgibslocKKMQ1fterul/nJJ/Srv8mxbzA/z569ZKFeR8gFlM0bxUkQVeJpGkHKkR6dcNuk6xtafRkm2W5Q04FUqF7/eEzvzMpf0a1kPOld44dZgYbncmk3bend40+fOwDpubozTtuLoimDIIxqdNp39d7w5h0a+s1U=
+    secure: xsWR1FHBIJRYOv17p0o6RrwHPDE4spcqzsIj/wmPdWDbslplvCp9HiLyMNy7IAkCehhvXlgNerOByyw+VY52cYEQ+rzKeU8NMgI2tzg0If2KRoEKQd/MWN1avOwH511x4Qrtwh32jL1X553UVFnLcPWvdaWcByYJHfprw7IbPmo=
