fix(hyperup): adapt to hyper >v0.4.0
* adjust to NetworkConnector trait changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ documentation = "http://byron.github.io/yup-hyper-mock"
 license = "MIT"
 
 [dependencies]
-hyper = ">= 0.4.0"
+hyper = "> 0.4.0"
 log = "*"
