--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "yup-hyper-mock"
-version = "0.1.8"
+version = "1.0.0"
 authors = ["Sean McArthur <sean.monstar@gmail.com>",
            "Jonathan Reem <jonathan.reem@gmail.com>",
            "Sebastian Thiel <byronimo@gmail.com>"]
@@ -11,11 +11,5 @@ documentation = "http://byron.github.io/yup-hyper-mock"
 license = "MIT"
 
 [dependencies]
-# hyper = ">= 0.4.1"
+hyper = ">= 0.5.0"
 log = "*"
-
-# Need latest one for now until next release
-[dependencies.hyper]
-version = ">= 0.4.0"
-git = "https://github.com/hyperium/hyper"
-rev = "871f37a5605d433e5699ed2f16631001d86d7805"
