--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
 - pip install 'travis-cargo<0.2' --user && export PATH=$HOME/.local/bin:$PATH
 script:
 - travis-cargo build
+- travis-cargo test
 - travis-cargo doc
 after_success:
 - travis-cargo doc-upload
