--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "yup-hyper-mock"
-version = "4.0.0"
+version = "5.14.0"
 authors = ["Sean McArthur <sean.monstar@gmail.com>",
            "Jonathan Reem <jonathan.reem@gmail.com>",
-           "Sebastian Thiel <byronimo@gmail.com>"]
+           "Sebastian Thiel <byronimo@gmail.com>",
+           "Benjamin Pannell <contact@sierrasoftworks.com>"]
 description = "A utility library for testing clients using hyper"
 repository = "https://github.com/Byron/yup-hyper-mock"
 documentation = "http://byron.github.io/yup-hyper-mock"
@@ -12,12 +13,12 @@ include = ["src/**/*", "Cargo.toml"]
 edition = "2018"
 
 [dependencies]
-hyper = "0.13.1"
+hyper = { version = "0.14", features = ["client", "http1", "runtime", "stream"] }
 log = ">= 0.4"
 futures = "0.3"
-tokio = { version = "0.2", features = ["io-driver", "io-util", "stream"] }
+tokio = { version = "1.0", features = ["io-util"] }
 mio = "0.6"
 
 [dev-dependencies]
 env_logger = "0.7"
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["rt", "macros"] }
